# onshape-robotics-toolkit

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  client.py  getting_started.ipynb  index.html  main.py  mkdocs.yml  objects.inv  onshape.py  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: ci-docs.yml
api/assembly/: index.html
api/connect/: index.html
api/document/: index.html
api/element/: index.html
api/geometry/: index.html
api/graph/: index.html
api/joint/: index.html
api/link/: index.html
api/log/: index.html
api/mass/: index.html
api/mesh/: index.html
api/parse/: index.html
api/robot/: index.html
api/urdf/: index.html
api/utilities/: index.html
api/variable/: index.html
benchmark/: assembly.py  connectors.py  performance.py  relations.py  robots.py
contributing/: index.html
developing/: index.html
docs/: contributing.md  developing.md  getting-started.md  index.md  models.md  modules.md
docs/api/: assembly.md  connect.md  document.md  element.md  geometry.md  graph.md  joint.md  link.md  log.md  mass.md  mesh.md  parse.md  robot.md  urdf.md  utilities.md  variable.md
docs/tutorials/: edit.md  export.md
examples/bike/: main.py
examples/edit/: main.py
examples/export/: main.py  robots.py
examples/simulation/: ball.xml  controllers.py  explore.py  main.py  mods.py  transformations.py
examples/simulation/meshes/: ball.stl
getting-started/: index.html
onshape_api/: __init__.py  client.py  connect.py  connection.py  graph.py  log.py  main.py  map.py  mesh.py  onshape.py  parse.py  parser.py  robot.py  urdf.py  utilities.py
onshape_api/data/: checkpoints.py  preprocess.py
onshape_api/examples/bike/: main.py
onshape_api/models/: __init__.py  assembly.py  document.py  element.py  geometry.py  joint.py  link.py  mass.py  mjcf.py  robot.py  variable.py
onshape_api/utilities/: __init__.py  helpers.py
onshape_robotics_toolkit/: __init__.py  connect.py  graph.py  parse.py  robot.py  urdf.py
onshape_robotics_toolkit/data/: preprocess.py
onshape_robotics_toolkit/models/: __init__.py  assembly.py  geometry.py  joint.py  link.py  mass.py  mjcf.py  variable.py
onshape_robotics_toolkit/utilities/: helpers.py
search/: search_index.json
tests/: test_client.py  test_connect.py  test_parse.py  urls.py
tutorials/edit/: index.html
tutorials/export/: index.html
